# django-snakeviz-profiling

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/django_snakeviz_profiling/: __init__.py  db_profile.py
src/django_snakeviz_profiling/static/django_snakeviz_profiling/: LICENSE.txt
src/django_snakeviz_profiling/templates/django_snakeviz_profiling/: viz.html
tests/: test_settings.py  test_urls.py  tests.py
